# road-safety-hackathon-2026

./: .gitignore  README.md  docker-compose.yml
Design Docs/: hld_roadwatch.md  java_citizen_core_api_lld.md  java_crm_core_api_lld.md  python_citizen_ai_service_lld.md  python_crm_ai_service_lld.md
citizen-ai-service/: Dockerfile  pyproject.toml  requirements.txt
citizen-app/: App.tsx  app.json  jest.config.js  package-lock.json  package.json  tailwind.config.js  tscheck_output.txt  tsconfig.json
citizen-app-ui/: app.json  package-lock.json  package.json  tsconfig.json
citizen-core-api/: Dockerfile  pom.xml
crm-ai-service/: Dockerfile  pyproject.toml
crm-ai-service/app/: config.py  dependencies.py  main.py
crm-ai-service/app/api/: officer_chat.py  sla.py  uc.py  workorder.py
crm-ai-service/app/clients/: llm_client.py
crm-ai-service/app/jobs/: sla_scanner.py
crm-ai-service/app/services/: officer_chat_service.py  pow_service.py  sla_service.py  uc_service.py
crm-ai-service/tests/: test_pow.py  test_sla.py  test_uc.py
crm-core-api/: Dockerfile  pom.xml
crm-web/: index.html  package.json  playwright.config.ts  tailwind.config.js  vitest.config.ts
docs/: competitor_analysis.md  crm_user_personas.md  plan.md  road_authority_hierarchy.md
graphify-out/: .graphify_analysis.json  .graphify_cached.json  .graphify_chunk_01.json  .graphify_detect.json  .graphify_extract.json  .graphify_incremental.json  .graphify_labels.json  .graphify_python  .graphify_root  .graphify_semantic.json  .graphify_uncached.txt  GRAPH_REPORT.md  cost.json  graph.html  (+2 more)
(+184 files in other folders)
