[tool.poetry]
name = "crm-ai-service"
version = "1.0.0"
description = "FastAPI CRM AI Service for RoadWatch"
authors = ["RoadWatch Team"]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.30.6"}
pydantic = "^2.9.2"
pydantic-settings = "^2.5.2"
sqlalchemy = "^2.0.35"
asyncpg = "^0.29.0"
redis = "^5.0.8"
openai = "^1.47.0"
sse-starlette = "^2.1.3"
httpx = "^0.27.2"
pillow = "^10.4.0"
structlog = "^24.4.0"
apscheduler = "^3.10.4"
reportlab = "^4.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
